--- a/config/public/application.yml
+++ b/config/public/application.yml
@@ -8,3 +8,7 @@ management:
       exposure:
         include: refresh,health
         #暴露能被访问的地址：配置刷新（curl -X POST http://localhost:8802/actuator/refresh）和健康检查
+
+public:
+  config:
+    test: public
