turbine 监控多个服务，加强版Hystrix DashBoard

--- a/eureka-clientA/src/main/resources/bootstrap.yml
+++ b/eureka-clientA/src/main/resources/bootstrap.yml
@@ -20,6 +20,8 @@ spring:
     # 下载jar本地启动zipkin-server java -jar  zipkin-server-2.12.9-exec.jar 下载地址-https://dl.bintray.com/openzipkin/maven/io/zipkin/java/zipkin-server/
 
 eureka:
+  instance:
+    hostname: localhost
   client:
     serviceUrl:
       defaultZone: http://localhost:8800/eureka/
