--- a/eureka-clientA/pom.xml
+++ b/eureka-clientA/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.yao</groupId>
-    <artifactId>eureka-client</artifactId>
+    <artifactId>eureka-clientA</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>eureka-clientA</name>
     <description>Demo project for Spring Boot</description>
